== NEXT VERSION IN PROGRESS

* Fixed warnings revealed by latest Xcode. Thanks to: David Hart
* Changed iOS Architecture support to "Standard" (which includes armv7s)
* Changed Mac Architecture support to 64-bit only
* Converted to ARC


== Version 1.8 ==

09 Jul 2012
The primary purpose of this release is to make it easier to add OCHamcrest to iOS projects. No more need to specify "Other Linker Flags"! Depending on your project, you may be able to eliminate:
  * -lstdc++
  * -ObjC

Also, the repository has a new official home: https://github.com/hamcrest/OCHamcrest/

* No need to specify "Other Linker Flags" in iOS projects:
  - Changed all Objective-C++ to Objective-C
  - Eliminated categories

* Deprecated:
  - C++ template function boxNumber.
  - conformsToProtocol clashed with the method of the same name. It has been renamed to "conformsTo".

* Deleted following items deprecated in v1.2:
  - -[HCDescription appendValue]
  - +[HCInvocationMatcher createInvocationForSelector:onClass:]
  - NSObject+SelfDescribingValue


== Version 1.7 ==

20 Feb 2012
* New matchers:
  - "conformsToProtocol" matches objects that conform to a given protocol. Thanks to: Todd Farrell

* Improved matchers:
  - "hasProperty" now works for methods with primitive return types. Thanks to: Christopher Pickslay

* Other improvements:
  - Rewrote introductory sections of documentation.


== Version 1.6 ==

27 Sep 2011
* New matchers:
  - "hasProperty" matches the return value of a method with a given name. (It could be a property, but really can be any method with no arguments that returns an object.) Thanks to: Justin Shacklette

* Improvements:
  - Rewrote documentation.
  - Matchers that require a nil-terminated list now generate a compiler error if you don't have nil at the end.

* Fixes:
  - "stringContainsInOrder" was missing from the master header; now it's there.


== Version 1.5 ==

29 Apr 2011
* Fixed crash when trying to describe an object with nil description.

* Packaging: