@@ -4,6 +4,7 @@
 * Changed iOS Architecture support to "Standard" (which includes armv7s)
 * Changed Mac Architecture support to 64-bit only
 * Converted to ARC
+* Changed order of hasCount/hasCountOf mismatch description so that if object has a count, it comes first.
 
 
 == Version 1.8 ==
